<resources>
    <string name="app_name">StockView</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="password_again">Подтвердить пароль</string>
    <string name="all_ready_have_account">У меня есть аккаунт</string>
    <string name="logo">logo</string>
    <string name="empty_field_message">Введите email или пароль.</string>
    <string name="passwords_do_not_match">Пароли не совпадают.</string>
    <string name="successful_login">Вы успешно авторизовались.</string>
    <string name="unsuccessful_login">Авторизация не удалась. Попробуйте ещё раз.</string>
    <string name="unsuccessful_register">Регистрация не удалась. Попробуйте ещё раз.</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="news">Новости</string>
    <string name="profile">Профиль</string>
    <string name="visible_eye">visible eye</string>
    <string name="news_title">Овердрафт: что это такое и в каких случаях им можно пользоваться</string>
    <string name="news_description">Как использовать овердрафт физическим и юридическим лицам, и чем он отличается от обычного кредита — в обзоре «РБК Инвестиций»</string>
    <string name="news_image">news image</string>
    <string name="network_error">Загрузка не удалась</string>
    <string name="apple">Apple</string>
    <string name="_163_77">163,77</string>
    <string name="_1_56">-1,56</string>
    <string name="_0_94">-0,94%</string>
    <string name="company_logo">company_logo</string>
    <string name="no_found">Не найдено</string>
    <string name="find">Найти</string>
    <string name="apple_description">Aмериканская корпорация, разработчик персональных и планшетных компьютеров, аудиоплееров, смартфонов, программного обеспечения и цифрового контента. Штаб-квартира расположена в Купертино, штат Калифорния.</string>
</resources>