<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:padding="@dimen/value_16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:padding="@dimen/value_16dp"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/main_screen_search_button"
        style="@style/MainScreenButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/main_screen_profile_button"
        style="@style/MainScreenButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/profile" />

    <Button
        android:id="@+id/main_screen_news_button"
        style="@style/MainScreenButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/New" />

</LinearLayout>