<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/value_16dp"
    android:background="@color/yp_black"
    android:orientation="horizontal"
    android:padding="@dimen/value_16dp">

    <ImageView
        android:id="@+id/company_item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/company_logo"
        android:padding="8dp"
        android:src="@drawable/apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_32dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/apple"
        android:textColor="@color/yp_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/company_item_stock_price"
        app:layout_constraintStart_toEndOf="@id/company_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_item_stock_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_32dp"
        android:layout_marginTop="@dimen/value_16dp"
        android:text="@string/_163_77"
        android:textColor="@color/yp_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/company_item_image"
        app:layout_constraintTop_toBottomOf="@id/company_item_name" />

    <TextView
        android:id="@+id/company_item_stock_price_difference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_16dp"
        android:layout_marginTop="@dimen/value_16dp"
        android:text="@string/_1_56"
        android:textColor="@color/yp_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/company_item_stock_price"
        app:layout_constraintTop_toBottomOf="@id/company_item_name" />

    <TextView
        android:id="@+id/company_item_stock_price_difference_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_16dp"
        android:layout_marginTop="@dimen/value_16dp"
        android:text="@string/_0_94"
        android:textColor="@color/yp_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/company_item_stock_price_difference"
        app:layout_constraintTop_toBottomOf="@id/company_item_name" />

</androidx.constraintlayout.widget.ConstraintLayout>