<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:padding="@dimen/value_32dp">


    <ImageView
        android:id="@+id/login_screen_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_screen_email_et"
        style="@style/LoginScreenInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_64dp"
        android:layout_marginTop="@dimen/value_32dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_screen_logo" />


    <EditText
        android:id="@+id/login_screen_password_et"
        style="@style/LoginScreenInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_64dp"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/value_32dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_screen_email_et" />


    <Button
        android:id="@+id/login_screen_login_button"
        style="@style/LoginScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_screen_password_et" />


    <TextView
        android:id="@+id/login_screen_register_tw"
        style="@style/LoginScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>