<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_black">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/stock_screen_image"
            android:layout_width="@dimen/value_256dp"
            android:layout_height="@dimen/value_256dp"
            android:layout_marginTop="@dimen/value_64dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/apple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stock_screen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_16dp"
            android:text="@string/apple"
            android:textColor="@color/yp_white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_screen_image" />

        <TextView
            android:id="@+id/stock_screen_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_16dp"
            android:isScrollContainer="true"
            android:padding="@dimen/value_16dp"
            android:text="@string/apple_description"
            android:textColor="@color/yp_white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_screen_name" />


        <TextView
            android:id="@+id/stock_screen_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_163_77"
            android:textColor="@color/yp_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/stock_screen_price_change"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_screen_description" />

        <TextView
            android:id="@+id/stock_screen_price_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_1_56"
            android:textColor="@color/price_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/stock_screen_price_change_percent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/stock_screen_price"
            app:layout_constraintTop_toBottomOf="@id/stock_screen_description" />

        <TextView
            android:id="@+id/stock_screen_price_change_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_0_94"
            android:textColor="@color/price_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/stock_screen_price_change"
            app:layout_constraintTop_toBottomOf="@id/stock_screen_description" />

        <com.github.mikephil.charting.charts.LineChart
            android:background="@color/yp_white"
            android:id="@+id/stock_screen_chart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/value_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock_screen_price_change_percent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>