<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yp_black"
    android:padding="@dimen/value_16dp">

    <ImageView
        android:id="@+id/news_item_image"
        android:layout_width="@dimen/value_64dp"
        android:layout_height="@dimen/value_64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/news_item_image"
        android:contentDescription="@string/news_image" />

    <TextView
        android:id="@+id/news_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/ys_display"
        android:maxLines="1"
        android:text="@string/news_title"
        android:textColor="@color/yp_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/news_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/news_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/news_description"
        android:textColor="@color/yp_white"
        android:layout_marginTop="@dimen/value_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/news_item_image"
        app:layout_constraintTop_toBottomOf="@id/news_item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>