<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_black">

    <TextView
        android:id="@+id/search_screen_title"
        style="@style/ScreensTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/search_screen_search_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_16dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ys_display_medium"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/value_16dp"
        android:singleLine="true"
        android:textColor="@color/yp_black"
        android:textColorHint="@color/yp_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_screen_title"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/search_screen_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_16dp"
        android:backgroundTint="@color/yp_light_gray"
        android:contentDescription="@string/find"
        android:drawable="@drawable/search"
        android:padding="@dimen/value_16dp"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_screen_title" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_screen_search_field"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_screen_stocks_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/company_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/search_screen_not_found_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_found"
        android:textColor="@color/yp_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>